add resolving codebase from string artifact-coordinates